--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "debug": "^4.3.4",
     "express": "^4.18.1",
     "path": "^0.12.7",
     "rxjs": "~7.4.0",
